--- a/Bot/package.json
+++ b/Bot/package.json
@@ -11,6 +11,10 @@
   "dependencies": {
     "axios": "^0.19.0",
     "discord.js": "^11.5.1",
-    "mongoose": "^5.7.3"
+    "ffbinaries": "^1.1.4",
+    "ffmpeg-static": "^2.7.0",
+    "mongoose": "^5.7.3",
+    "node-opus": "^0.3.2",
+    "ytdl-core-discord": "^1.0.3"
   }
 }
